# McGb

./: .gitignore  CMakeLists.txt  README.md  launch.sh
src/: CPU.h  bus.cpp  bus.h  main.cpp
